# task2

./: .clang-format  CMakeLists.txt  Dockerfile  Makefile  README.md
.github/workflows/: CI.yml
libs/buffer_lib/: CMakeLists.txt
libs/buffer_lib/include/: buffer.h
libs/buffer_lib/src/: buffer.c
libs/buffer_lib/tests/: CMakeLists.txt  buffer_test.cpp
libs/temperature_lib/: CMakeLists.txt
libs/temperature_lib/include/: temperature.h
libs/temperature_lib/src/async/: temperature.c
libs/temperature_lib/src/sync/: temperature.c
libs/temperature_lib/tests/: CMakeLists.txt  temperature_test.cpp
scripts/: check.sh
src/: main.c
